[gd_scene load_steps=7 format=3 uid="uid://b2jo5emabqcag"]

[ext_resource type="Script" path="res://mini-games/CrankGame/CrankGame.gd" id="1_mdnko"]
[ext_resource type="Texture2D" uid="uid://bheppk6rjs6k" path="res://mini-games/assets/bg.png" id="2_bgdrb"]
[ext_resource type="Texture2D" uid="uid://b2jks5na13iu1" path="res://mini-games/CrankGame/assets/machine.png" id="3_7lkkv"]
[ext_resource type="Script" path="res://mini-games/CrankGame/crankArm.gd" id="4_r10tm"]
[ext_resource type="Texture2D" uid="uid://copan8lj5xgwh" path="res://mini-games/CrankGame/assets/crank.png" id="5_1h5uo"]

[sub_resource type="LabelSettings" id="LabelSettings_qf6cr"]
font_size = 64

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mdnko")
metadata/_edit_vertical_guides_ = [-338.0]

[node name="background" type="Sprite2D" parent="."]
position = Vector2(251, 251)
texture = ExtResource("2_bgdrb")

[node name="CrankBody" type="Node2D" parent="."]
position = Vector2(250, 267)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="CrankBody"]
position = Vector2(1, 0)
texture = ExtResource("3_7lkkv")

[node name="crankArm" type="Node2D" parent="."]
position = Vector2(250, 215)
script = ExtResource("4_r10tm")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="crankArm"]
rotation = -1.5708
texture = ExtResource("5_1h5uo")
offset = Vector2(0, 60)

[node name="timer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="timer" type="Label" parent="timer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "1
"
label_settings = SubResource("LabelSettings_qf6cr")

[node name="CenterContainer3" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="fail" type="Label" parent="CenterContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Fail!"
label_settings = SubResource("LabelSettings_qf6cr")

[node name="won" type="Label" parent="CenterContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Charging!"
label_settings = SubResource("LabelSettings_qf6cr")

[node name="instructions" type="Label" parent="CenterContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Crank it!"
label_settings = SubResource("LabelSettings_qf6cr")

[node name="fail_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="win" from="crankArm" to="." method="_on_crank_arm_win"]
[connection signal="timeout" from="fail_timer" to="." method="_on_timer_timeout"]
